@@ -10,12 +10,9 @@ services:
     ports:
       - 2012:2012
       - 2080:2080
-    volumes:
-      - ../../conf/samples/docker/:/etc/cgrates/:ro
-      - ../../tariffplans/tutorial/:/data/:ro
     environment:
       - DOCKER_IP=0.0.0.0
-    command: /cgr-engine --logger=*stdout -httprof_path=/pprof
+    command: /cgr-engine --logger=*stdout -httprof_path=/pprof -config_path=https://raw.githubusercontent.com/cgrates/cgrates/master/data/conf/samples/docker/cgrates.json
   
   redis:
     image: redis
