@@ -3,11 +3,9 @@ services:
   cgr-migrator:
     image: dkr.cgrates.org/nightly/cgr-migrator
     container_name: cgr-migrator
-    volumes:
-      - ../../conf/samples/docker/:/etc/cgrates/:ro
     environment:
       - DOCKER_IP=cgr-engine
-    command: /cgr-migrator -config_path=/etc/cgrates/ --exec=*set_versions
+    command: /cgr-migrator -config_path=https://raw.githubusercontent.com/cgrates/cgrates/master/data/conf/samples/docker/cgrates.json --exec=*set_versions
 networks:
   default:
     external:
