@@ -3,11 +3,9 @@ services:
   cgr-tester:
     image: dkr.cgrates.org/nightly/cgr-tester
     container_name: cgr-tester
-    volumes:
-      - ../../conf/samples/docker/:/etc/cgrates/:ro
     environment:
       - DOCKER_IP=cgr-engine
-    command: /cgr-tester -config_path=/etc/cgrates/ 
+    command: /cgr-tester -config_path=https://raw.githubusercontent.com/cgrates/cgrates/master/data/conf/samples/docker/cgrates.json
 networks:
   default:
     external:
